Fix snackbar spacing

--- a/style/base.css
+++ b/style/base.css
@@ -122,7 +122,7 @@
 #aws-connector-snackbar {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
     visibility: hidden;
     min-width: 250px;
     margin-left: -125px;
